{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 24,
  "lineage": "b54baf1c-841a-d5c9-a109-f56097e4a778",
  "resources": [
    {
      "module": "module.main_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:196029031078:security-group/sg-0e9348134218e6041",
            "description": "Main Security group for lighthouse-training",
            "egress": [],
            "id": "sg-0e9348134218e6041",
            "ingress": [],
            "name": "main-sg-lighthouse-training-20230529165206113000000001",
            "name_prefix": "main-sg-lighthouse-training-",
            "owner_id": "196029031078",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "main-sg-lighthouse-training",
              "tier": "main"
            },
            "tags_all": {
              "Name": "main-sg-lighthouse-training",
              "project": "lighthouse",
              "tier": "main"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-088968963d206d313"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.main_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Egress Rule",
            "from_port": -1,
            "id": "sgrule-1962222533",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0e9348134218e6041",
            "security_group_rule_id": "sgr-0cccce7a88f061dc9",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main_security_group.aws_security_group.this",
            "module.main_security_group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.main_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "200.225.115.108/32"
            ],
            "description": "Allow all traffic to the IP that belongs to machine running terraform apply",
            "from_port": 0,
            "id": "sgrule-1222847841",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0e9348134218e6041",
            "security_group_rule_id": "sgr-0bf40ed5f0c2e89eb",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.http.my_ip",
            "module.main_security_group.aws_security_group.this",
            "module.main_security_group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.main_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Ingress Rule",
            "from_port": -1,
            "id": "sgrule-2472683246",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0e9348134218e6041",
            "security_group_rule_id": "sgr-0e2eb01ca2dacd269",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main_security_group.aws_security_group.this",
            "module.main_security_group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:196029031078:network-acl/acl-039589db19a975ad6",
            "default_network_acl_id": "acl-039589db19a975ad6",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-039589db19a975ad6",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "196029031078",
            "subnet_ids": [
              "subnet-03cacbde3624096ff",
              "subnet-053ee0921c400215a",
              "subnet-08f7c2c8bca034a61",
              "subnet-0e1b0510b84441f60"
            ],
            "tags": {
              "Name": "main-vpc-lighthouse-training-default"
            },
            "tags_all": {
              "Name": "main-vpc-lighthouse-training-default",
              "project": "lighthouse"
            },
            "vpc_id": "vpc-088968963d206d313"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:196029031078:route-table/rtb-00dae5a4649c8d190",
            "default_route_table_id": "rtb-00dae5a4649c8d190",
            "id": "rtb-00dae5a4649c8d190",
            "owner_id": "196029031078",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "main-vpc-lighthouse-training-default"
            },
            "tags_all": {
              "Name": "main-vpc-lighthouse-training-default",
              "project": "lighthouse"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-088968963d206d313"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:196029031078:security-group/sg-06b1d81c3d1a26a04",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-06b1d81c3d1a26a04",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "196029031078",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "main-vpc-lighthouse-training-default"
            },
            "tags_all": {
              "Name": "main-vpc-lighthouse-training-default",
              "project": "lighthouse"
            },
            "vpc_id": "vpc-088968963d206d313"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06228515e53b98e63",
            "domain": "vpc",
            "id": "eipalloc-06228515e53b98e63",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-87-136-94.compute-1.amazonaws.com",
            "public_ip": "52.87.136.94",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "main-vpc-lighthouse-training-us-east-1a"
            },
            "tags_all": {
              "Name": "main-vpc-lighthouse-training-us-east-1a",
              "project": "lighthouse"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:196029031078:internet-gateway/igw-0f853bdaaa3f91fa4",
            "id": "igw-0f853bdaaa3f91fa4",
            "owner_id": "196029031078",
            "tags": {
              "Name": "main-vpc-lighthouse-training"
            },
            "tags_all": {
              "Name": "main-vpc-lighthouse-training",
              "project": "lighthouse"
            },
            "vpc_id": "vpc-088968963d206d313"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06228515e53b98e63",
            "association_id": "eipassoc-0c7b85e40770c35ff",
            "connectivity_type": "public",
            "id": "nat-0b35903fc5eafb566",
            "network_interface_id": "eni-028779c54effc8238",
            "private_ip": "10.0.101.170",
            "public_ip": "52.87.136.94",
            "subnet_id": "subnet-0e1b0510b84441f60",
            "tags": {
              "Name": "main-vpc-lighthouse-training-us-east-1a"
            },
            "tags_all": {
              "Name": "main-vpc-lighthouse-training-us-east-1a",
              "project": "lighthouse"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03e03e049c2be65f31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0b35903fc5eafb566",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03e03e049c2be65f3",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f853bdaaa3f91fa4",
            "id": "r-rtb-0ac741cb9d6c335611080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ac741cb9d6c33561",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:196029031078:route-table/rtb-03e03e049c2be65f3",
            "id": "rtb-03e03e049c2be65f3",
            "owner_id": "196029031078",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "main-vpc-lighthouse-training-private"
            },
            "tags_all": {
              "Name": "main-vpc-lighthouse-training-private",
              "project": "lighthouse"
            },
            "timeouts": null,
            "vpc_id": "vpc-088968963d206d313"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:196029031078:route-table/rtb-0ac741cb9d6c33561",
            "id": "rtb-0ac741cb9d6c33561",
            "owner_id": "196029031078",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "main-vpc-lighthouse-training-public"
            },
            "tags_all": {
              "Name": "main-vpc-lighthouse-training-public",
              "project": "lighthouse"
            },
            "timeouts": null,
            "vpc_id": "vpc-088968963d206d313"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0db4af61aa4682a57",
            "route_table_id": "rtb-03e03e049c2be65f3",
            "subnet_id": "subnet-03cacbde3624096ff"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f7d5c77003a5b12f",
            "route_table_id": "rtb-03e03e049c2be65f3",
            "subnet_id": "subnet-08f7c2c8bca034a61"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-052d534b4d5c2b2c2",
            "route_table_id": "rtb-0ac741cb9d6c33561",
            "subnet_id": "subnet-0e1b0510b84441f60"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b60a11a7a4d68ba6",
            "route_table_id": "rtb-0ac741cb9d6c33561",
            "subnet_id": "subnet-053ee0921c400215a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:196029031078:subnet/subnet-03cacbde3624096ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03cacbde3624096ff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "196029031078",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main-vpc-lighthouse-training-private-us-east-1a",
              "kubernetes.io/role/internal-elb": "1",
              "type": "private"
            },
            "tags_all": {
              "Name": "main-vpc-lighthouse-training-private-us-east-1a",
              "kubernetes.io/role/internal-elb": "1",
              "project": "lighthouse",
              "type": "private"
            },
            "vpc_id": "vpc-088968963d206d313"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:196029031078:subnet/subnet-08f7c2c8bca034a61",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08f7c2c8bca034a61",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "196029031078",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main-vpc-lighthouse-training-private-us-east-1b",
              "kubernetes.io/role/internal-elb": "1",
              "type": "private"
            },
            "tags_all": {
              "Name": "main-vpc-lighthouse-training-private-us-east-1b",
              "kubernetes.io/role/internal-elb": "1",
              "project": "lighthouse",
              "type": "private"
            },
            "vpc_id": "vpc-088968963d206d313"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:196029031078:subnet/subnet-0e1b0510b84441f60",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e1b0510b84441f60",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "196029031078",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main-vpc-lighthouse-training-public-us-east-1a",
              "kubernetes.io/role/elb": "1",
              "type": "public"
            },
            "tags_all": {
              "Name": "main-vpc-lighthouse-training-public-us-east-1a",
              "kubernetes.io/role/elb": "1",
              "project": "lighthouse",
              "type": "public"
            },
            "vpc_id": "vpc-088968963d206d313"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:196029031078:subnet/subnet-053ee0921c400215a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-053ee0921c400215a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "196029031078",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main-vpc-lighthouse-training-public-us-east-1b",
              "kubernetes.io/role/elb": "1",
              "type": "public"
            },
            "tags_all": {
              "Name": "main-vpc-lighthouse-training-public-us-east-1b",
              "kubernetes.io/role/elb": "1",
              "project": "lighthouse",
              "type": "public"
            },
            "vpc_id": "vpc-088968963d206d313"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:196029031078:vpc/vpc-088968963d206d313",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-039589db19a975ad6",
            "default_route_table_id": "rtb-00dae5a4649c8d190",
            "default_security_group_id": "sg-06b1d81c3d1a26a04",
            "dhcp_options_id": "dopt-060a95537f2fb9ab7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-088968963d206d313",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00dae5a4649c8d190",
            "owner_id": "196029031078",
            "tags": {
              "Name": "main-vpc-lighthouse-training",
              "name": "main-vpc-lighthouse-training",
              "tier": "main"
            },
            "tags_all": {
              "Name": "main-vpc-lighthouse-training",
              "name": "main-vpc-lighthouse-training",
              "project": "lighthouse",
              "tier": "main"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}